RESOLVED FIXED13904
REGRESSION: Search fields with a results popup do not always draw the popup arrow
https://bugs.webkit.org/show_bug.cgi?id=13904
Summary REGRESSION: Search fields with a results popup do not always draw the popup a...
mitz
Reported 2007-05-29 00:10:22 PDT
The little arrow that indicates that the search field has a popup menu is not always drawn. More precisely, once WebKit draws a search field that has a results decoration (magnifying glass without an arrow, used for <input type="search" results="0">), it will never draw the popup arrow again. In the URL, the second search field should draw the arrow, but it does not.
Attachments
Control the drawing of the arrow by setting and resetting the search menu template (41.79 KB, patch)
2007-05-29 00:11 PDT, mitz
mjs: review+
mitz
Comment 1 2007-05-29 00:11:37 PDT
Created attachment 14767 [details] Control the drawing of the arrow by setting and resetting the search menu template
Maciej Stachowiak
Comment 2 2007-05-29 01:04:45 PDT
Comment on attachment 14767 [details] Control the drawing of the arrow by setting and resetting the search menu template I don't think you meant to include that box-shadow-override test with this, and you seem to be missing the actual test case.
Maciej Stachowiak
Comment 3 2007-05-29 01:10:16 PDT
Comment on attachment 14767 [details] Control the drawing of the arrow by setting and resetting the search menu template nevermind, test was right
Sam Weinig
Comment 4 2007-05-29 14:47:29 PDT
Landed in r21865.
Note You need to log in before you can comment on or make changes to this bug.