LayoutTests:

Reviewed by Maciej.

        - updated results for http://bugs.webkit.org/show_bug.cgi?id=13904

        * fast/forms/box-shadow-override-expected.checksum:
        * fast/forms/box-shadow-override-expected.png:

WebCore:

        Reviewed by Maciej.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13904
          REGRESSION: Search fields with a results popup do not always draw the popup arrow

        Covered by fast/forms/box-shadow-override.html

        The search button draws a popup arrow depending on whether the
        search menu template is set, rather than on the maximum number of recent
        search strings.

        * rendering/RenderThemeMac.h:
        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::paintSearchFieldResultsDecoration): Removed the
        call to -setMaxmiumRecents:.
        (WebCore::RenderThemeMac::paintSearchFieldResultsButton): Replaced calling
        -setMaximumRecents: with setting the search menu template.
        (WebCore::RenderThemeMac::search): Removed initialization of the menu.
        (WebCore::RenderThemeMac::searchMenuTemplate): Added. Returns an empty
        NSMenu to be used as the search menu template.



Canonical link: https://commits.webkit.org/18244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21865 268f45cc-cd09-0410-ab3c-d52691b4dbfc